# full_dxf_laser_buisness

./: .env.example  .env.module_n.example  .gitignore  CONFIGURATION_GUIDE.md  FINAL_COMPREHENSIVE_SUMMARY.md  FUTURE_IMPROVEMENTS.md  GITHUB_READINESS_REPORT.md  LICENSE  Laser cutting parameters.html  PHASE1_TEST_REPORT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  PHASE2_TEST_REPORT.md  PHASE4_COMPLETE.md  PHASE4_TEST_REPORT.md  PHASE6_COMPLETE.md  PHASE8_COMPLETE.md  PHASE_6_IMPLEMENTATION_SUMMARY.md  PHASE_8_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  apply_phase2_migration.py  apply_phase3_migration.py  apply_phase5_migration.py  apply_phase6_migration.py  apply_phase9_migration.py  check_db_schema.py  check_status.py  config.py  laser_ops_app_spec_Update.md  laser_ops_business_automation_master_blueprint_dxf_ops_os.md  laser_os_migration_and_summary.md  requirements.txt  requirements_module_n.txt  run.py  run_module_n.py  run_phase10_migration.py  test_app.py  test_phase2_projects.py  test_phase4_templates.py  (+10 more)
6000_Presets/: 0.5mm C Air CS Used 1.5sn.fsm  0.5mm C air cut 1.5sn.fsm  0.5mm CS Air cut 1.5sn - JIC.fsm  0.5mm MS Air Cut 1.5sn - Correct FN.fsm  1.2mm Al air cut 1.5sn.fsm  1.2mm MS air cut 1.5sn.fsm  1.5mm ss air 1.5sn.fsm  1.6mm ms air cut 1.5sn + Engrave.fsm  (+40 more)
Sage_agent - UIUX/sage-agent-starter/backend/: .env.example  README.md  pyproject.toml
Sage_agent - UIUX/sage-agent-starter/backend/app/: audit_service.py  db.py  main.py  oauth.py  routes_sage.py  routes_settings.py  sage_v31.py  settings.py  token_manager.py  za_defaults.py
(+1194 files in other folders)
