[project]
name = "sage-agent-backend"
version = "0.1.0"
description = "AI Sage Agent backend (FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.2",
    "itsdangerous>=2.2.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8777
app = "app.main:app"
reload = true
